# pandora

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  instructions.md  main.py  pyproject.toml
backend/: Dockerfile  app.py  chatbot.db  main.py  pyproject.toml  test_services.py
backend/app/: main.py
backend/app/api/: auth.py  chat.py
backend/app/db/: crud.py  database.py  models.py
backend/app/services/: auth.py  embedding.py  llm.py  llm_service.py  security.py
backend/scripts/: enforce_user_constraint.py  fix_sequences.py  link_conversations_to_user.py  load_conversations.py  migrate_data.py  test_message_crud.py  test_response.py  test_security.py  update_db_schema.py
backend/scripts/tests/: test_crud.py  test_db_connection.py  test_rag.py  test_response.py
frontend/: nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: AuthForm.jsx  ChatArea.jsx  ChatInterface.jsx  LandingPage.jsx  Login.jsx  Sidebar.jsx  Signup.jsx
