[project]
name = "pandora"
version = "0.1.0"
description = "A mental health chatbot powered by AI."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.21.0",
    "asyncpg>=0.31.0",
    "cryptography>=46.0.3",
    "databases>=0.9.0",
    "dotenv>=0.9.9",
    "fastapi>=0.120.0",
    "huggingface-hub>=0.36.0",
    "numpy>=1.24.0",
    "ollama>=0.6.1",
    "openai>=2.6.0",
    "pandas>=2.3.3",
    "pgvector>=0.4.2",
    "psycopg2>=2.9.11",
    "pydantic>=2.12.3",
    "scikit-learn>=1.3.0",
    "sqlalchemy>=2.0.44",
    "transformers>=4.35.0",
    "uvicorn>=0.38.0",
]
